test/libsolidity/syntaxTests/storageLayoutSpecifier/string.sol
contract C layout at "MyLayoutBase" {}
// ----
// TypeError 6396: (21-35): The base slot of the storage layout must evaluate to a rational number.
